# enso

./: README.md  pyproject.toml
src/: automation.py  codegen.py  create_json.py  eval.py  false_result_examples.json  output_three.json  output_two.json  results_show_professor.json
src/extracted_python_snippets/: code_snippet_0.py  code_snippet_1.py  code_snippet_2.py  code_snippet_3.py  code_snippet_4.py  code_snippet_5.py  code_snippet_6.py  code_snippet_7.py  code_snippet_8.py  code_snippet_9.py
src/extracted_python_snippets_two/: code_snippet_0.py  code_snippet_1.py  code_snippet_2.py  code_snippet_3.py  code_snippet_4.py  code_snippet_5.py  code_snippet_6.py  code_snippet_7.py  code_snippet_8.py  code_snippet_9.py
src/output_2025-11-10/: code_based_evaluations.json  pydantic_ai_evaluations.json
src/output_2025-11-10/extracted_python_snippets/: code_snippet_0.py  code_snippet_1.py  code_snippet_10.py  code_snippet_14.py  code_snippet_15.py  code_snippet_17.py  code_snippet_19.py  code_snippet_3.py  code_snippet_4.py  code_snippet_5.py  code_snippet_9.py
src/test_new_v/: delete.py  divergent_examples.json  gemini.py  gemini_v2.py  tc_output_check.py
src/v_1.0/: automation.py  create_json.py  eval.py
src/v_1.0/output_2025-11-10/: code_examples_17-46-04.json  pydantic_ai_evaluations.json
src/v_1.0/output_2025-11-10/extracted_python_snippets/: code_snippet_11.py  code_snippet_12.py  code_snippet_13.py  code_snippet_16.py  code_snippet_18.py  code_snippet_2.py  code_snippet_6.py  code_snippet_7.py  code_snippet_8.py
src/v_2.0/: codegen_new.py
