[project]
name = "pytifex-utils"
version = "0.1.0"
description = "All the required packages you need to be able to run pytifex."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Benedek Kaibas", email = "kaibas01@allegheny.edu"}
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-ai",
    "pydantic-core",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pyright>=1.1.0",
    "zuban>=1.0",
    "ty>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.0",
    "pyright>=1.1.0",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pyright]
include = ["src"]
pythonVersion = "3.9"
typeCheckingMode = "basic"

